# fakeit

./: .dockerignore  README.md  docker-compose.yml  dockerfile  example.json  makefile  pyproject.toml
fakeit/: gen.py  main.py  rand.py  reader.py  router.py  serve.py
fakeit/models/: base.py  definition.py  dummy.py
fakeit/reader/: __init__.py  getter.py
fakeit/serve/: __init__.py  router.py
tests/: test_fakeit.py  test_rand.py
