[tool.poetry]
authors = ["rokoatcoffee"]
description = ""
name = "fakeit"
version = "0.0.1"

[tool.poetry.dependencies]
fastapi = "^0.63.0"
python = "^3.9"
Hypercorn = "^0.11.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.5"
flake8 = "^3.8.4"
pytest = "^5.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
